Bug 390676 - unpredictable desktop settings
Summary: unpredictable desktop settings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-18 11:36 UTC by kolorafa
Modified: 2018-04-05 07:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen layout from video (76.03 KB, image/png)
2018-02-21 11:41 UTC, kolorafa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kolorafa 2018-02-18 11:36:02 UTC
I assume that Dolphin handles desktop icons (or they use the same engine/lib), please point me in the right direction if I'm wrong.

Setting 3 screens to "show desktop icons".

Expected result:
show the same icons on every screen (like in 17.10)

Current result:
it shows desktop icons only on one (random?) screen

Bad workaround:
set to show files from ~/Desktop (it show them but doesn't resolve .desktop files so it's showing names with .desktop) also it works only on (random?) second screen

https://youtu.be/U4yKDNcvk3g


As show in video, I opened desktop setting for every screen and tried various combinations, and the result is crazy.

For example if desktop icons is set to every screen only probably first/primary screen gets icons, if i switch primary to something else the second screen gets icons. It might be the "desired" by developer but at least not by me.

But i think it's a bug as other settings also work "unpredictable" as for example i set it to show place - select home directory, and it only show it sometimes depending on other screen settings.

If the desktop behavior was "expected" please fix/revert it back to the way it was, if someone want to have different icons on every screen then he could set them to different directories or add third option to "show only on primary".

plasmashell: 5.12.1
kernel: 4.15.3-2
Comment 1 Eike Hein 2018-02-20 20:37:39 UTC
Adding Andras ...
Comment 2 András Manţia 2018-02-20 21:06:59 UTC
Thanks for the video! Can you tell me which is the the first, second, third screen? In System Settings-Display you can see the display layout and tell me which one is the primary display.
Comment 3 kolorafa 2018-02-21 11:41:43 UTC
Created attachment 110869 [details]
screen layout from video

Hi András

The primary was the middle one (the one with the icons at first).

Second should be the left one, but i don't know how to tell.


(the left screen have a "panel padding" becase the physical screen top and bottom is broken, but still usable)

plasmashell 5.11.5 - the same icons on every screen (i like it that way)
plasmashell 5.12.X - icons only on first/primary (until you have something else on that screen)

Is it a bug?
Thanks
Comment 4 András Manţia 2018-02-21 11:47:46 UTC
I can reproduce it somewhat, although partially I think it is not a bugs.
When you have 3 monitors with folderview requested to show Desktop folder on all of them, by default the icons should be on the first screen (as it is defined in ~/.config/plasmashellrc [ScreenConnectors]). If the screen where the icons are is disconencted or the folderview is changed to show something else, the icons will be moved to the first available screen that has the same URL configured as a source.
Let's take this scenario:
- Desktop 1, screen 0: no icons
- Desktop 2, screen 1: has all the icons from ~/Desktop
- Desktop 3, screen 2: no icons

Desktop 2 is changed to shows Home instead of Desktop, the result will be:
- Desktop 1, screen 0: has all the icons from ~/Desktop 
- Desktop 2, screen 1: has all the icons from Home
- Desktop 3, screen 2: no icons

If Desktop 1 is now changed to show the Home, it will be:
- Desktop 1, screen 0: no icons (as all Home icons are already on Desktop 2)
- Desktop 2, screen 1: has all the icons from Home
- Desktop 3, screen 2: has all the icons from ~/Desktop

At least, this is the theory. As I see this works, but the problem is when for example Home is configured for all screens, and the one where it was showing the icons from Home is removed, the Home icons do not appear in other places (like in the Desktop case) despite they should. 

Can you confirm the above?
Comment 5 kolorafa 2018-02-21 12:21:38 UTC
Like you see on video:

1. All 3 screens set to desktop view, icons (x, desktop, x) - ok
2. screen 2 switched to home (desktop, home, desktop) icons (desktop, x, x) - error
3. screen 1 switched to home (home, home, desktop) icons (x, x, x) - error
4. screen 3 switched to home (home, home, home) icons (x, home, x) - ok
5. screen 2 switched to desktop (home, desktop, home) icons (x, desktop, x) - error
6. and 7. switch screen 3 to desktop and home - no change
8. screen 2 to desktop (desktop, desktop, home) icons (desktop, x, x) - error
...

ok - like in the theory
x - no icons

Ok, it might require a reboot to correctly handle the change, or maybe need to close Settings after every change, but my personal question would be:
How can i show the same icons on all screens like in plasmashell 5.11.5? (Or how to show the same directory on all screen).

Also if we going into setting what is on primary, secondary and so on, then there should be a single place where you select:

Primary: X
Secondary: Y
Third: Z

For example the current view but in tabs for screen order.
...
and then if you disconnect primary, then the next screen will get the primary, so then you do it like that:

Primary: Desktop
Secondary: nothing
Third: Nothing

then you get always icons on primary

and for example me, i can set
Primary: Desktop
Secondary: Desktop
Third: Desktop

and i will have the 5.11 way :)

The way settings are currently in 5.12 when you select "show desktop icons" and see nothing is wrong.
Comment 6 kolorafa 2018-02-21 12:36:10 UTC
If needed i can redo the video in english.

For now you could download the current from youtube and expand video to multiple screen to better see what is going on.

(Or you could use my favorite trick:
1. click fullscreen on youtube
2. ALT+F3 > more > disable fullscreen (the video will stay fullscreen but behave as window)
3. ALT+F3 > more > move to left screen
4. ALT+F3 > more > change size / resize over multiple screens
(or you can use META+Mouse for 3-4))
Comment 7 András Manţia 2018-02-21 20:40:21 UTC
Tentative patch is in https://phabricator.kde.org/D10728
Comment 8 András Manţia 2018-03-08 11:09:09 UTC
Patch was merged to both 5.12 and master branches, should be in the next plasma release.
Comment 9 András Manţia 2018-03-08 11:10:50 UTC
Please reopen if you still see the problem with it.
Comment 10 kolorafa 2018-04-05 07:50:54 UTC
KCrash: Attempting to start /usr/bin/plasmashell from kdeinit
sock_file=/run/user/1000/kdeinit5__0
QSocketNotifier: Invalid socket 8 and type 'Read', disabling...
QSocketNotifier: Invalid socket 9 and type 'Read', disabling...
QSocketNotifier: Invalid socket 27 and type 'Read', disabling...
QSocketNotifier: Invalid socket 55 and type 'Read', disabling...
QSocketNotifier: Invalid socket 62 and type 'Read', disabling...
KCrash: Application 'plasmashell' crashing...
KCrash: Attempting to start /usr/lib/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0

[1]+  Pułapka debuggera/breakpoint     (zrzut pamięci) plasmashell

Debugger trap/breakpoing    (memory dump) plasmashell

almost every time plasmashell dies if I switch between "Desktop" and "Folder view"