Improve multi-desktop folderview behavior

Summary:
1) remove the items from the active map when they are on a disabled screen.
Fixes the case of Screen 1 showing Foo, Screen 2 showing Bar, Screen 1
switching to Bar (files from under Foo should disappear), Screen 2 switches to
Foo (files from under Foo should appear now on screen 2, they did not before)

2) don't store twice an item in the m_itemsOnDisablesScreensMap. This could
happen before with setups having more than two screens.

3) Remove m_firstScreenForPath and instead store the screen ids per url in
m_screensPerPath and use the one with lowest id from it for the first screen.
Help with detecting the first valid screen in 2+ screen scenarios.

4) remove the isEmpty check in addScreen, that caused all items to be added
under a screen with "desktop:///" path, even if they belonged somewhere else.

5) Save and restore the items-on-disabled-screen map to the config file.
This should help in having a consistent behavior after restarting plasma.
It could help with bug 389745

BUG: 390676
CCBUG: 389745

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D10728